alert-matcher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: alert-matcher
  name: alert-matcher
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: alert-matcher
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\kompose\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/logaggregation_elastic: "true"
        io.kompose.network/logaggregation_kafka: "true"
        io.kompose.service: alert-matcher
    spec:
      containers:
      - args:
        - npm
        - run
        - start
        image: alert_matcher
        imagePullPolicy: Never
        name: alert-matcher
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /usr/src/alert_matcher/quotes
          name: alert-matcher-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: alert-matcher-claim0
        persistentVolumeClaim:
          claimName: alert-matcher-claim0
status: {}
