es-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: es-api
  name: es-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: es-api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\kompose\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/logaggregation_elastic: "true"
        io.kompose.service: es-api
    spec:
      containers:
      - args:
        - npm
        - run
        - start
        image: es_api
        imagePullPolicy: Never
        name: es-api
        ports:
        - containerPort: 3000
        resources: {}
        volumeMounts:
        - mountPath: /usr/src/es_api/quotes
          name: es-api-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: es-api-claim0
        persistentVolumeClaim:
          claimName: es-api-claim0
status: {}
