es01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: es01
  name: es01
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: es01
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\kompose\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/logaggregation_elastic: "true"
        io.kompose.service: es01
    spec:
      securityContext:
        fsGroup: 2000 
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xms512m -Xmx512m
        - name: bootstrap.memory_lock
          value: "true"
        - name: cluster.initial_master_nodes
          value: es01,es02,es03
        - name: cluster.name
          value: es-docker-cluster
        - name: discovery.seed_hosts
          value: es02,es03
        - name: http.cors.allow-credentials
          value: "true"
        - name: http.cors.allow-headers
          value: X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization
        - name: http.cors.allow-origin
          value: http://localhost
        - name: http.cors.enabled
          value: "true"
        - name: node.name
          value: es01
        image: docker.elastic.co/elasticsearch/elasticsearch:7.12.0
        imagePullPolicy: ""
        name: es01
        ports:
        - containerPort: 9200
        resources: {}
        volumeMounts:
        - mountPath: /elasticsearch/data
          name: logaggregation-data01
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: logaggregation-data01
        persistentVolumeClaim:
          claimName: logaggregation-data01
status: {}
