zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zookeeper
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\kompose\kompose.exe convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/logaggregation_kafka: "true"
        io.kompose.service: zookeeper
    spec:
      containers:
      - env:
        - name: ALLOW_ANONYMOUS_LOGIN
          value: "yes"
        image: docker.io/bitnami/zookeeper:3
        imagePullPolicy: ""
        name: zookeeper
        ports:
        - containerPort: 2181
        resources: {}
        volumeMounts:
        - mountPath: /bitnami
          name: logaggregation-zookeeper-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: logaggregation-zookeeper-data
        persistentVolumeClaim:
          claimName: logaggregation-zookeeper-data
status: {}
