notif-sender-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: notif-sender
  name: notif-sender
spec:
  ports:
  - name: "8888"
    port: 8888
    targetPort: 8888
  selector:
    io.kompose.service: notif-sender
status:
  loadBalancer: {}
