logaggregation_kafka-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: logaggregation-kafka
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/logaggregation_kafka: "true"
  podSelector:
    matchLabels:
      io.kompose.network/logaggregation_kafka: "true"
